@@ -1,3 +1,15 @@
+2021-05-19  Antti Koivisto  <antti@apple.com>
+
+        Factor pseudo class invalidation code in Document::updateHoverActiveState into a lambda
+        https://bugs.webkit.org/show_bug.cgi?id=225966
+
+        Reviewed by Sam Weinig.
+
+        Cleanup.
+
+        * dom/Document.cpp:
+        (WebCore::Document::updateHoverActiveState):
+
 2021-05-19  Chris Dumez  <cdumez@apple.com>
 
         Fix flaky assertion hit under AudioSummingJunction::removeOutput()
